<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c6bed">

    <!--    <com.airbnb.lottie.LottieAnimationView-->
    <!--        android:id="@+id/animation_view"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        android:layout_gravity="center_horizontal"-->
    <!--        app:lottie_rawRes="@raw/lottie_loading"-->
    <!--        app:lottie_loop="false"-->
    <!--        app:lottie_autoPlay="true" />-->

    <ImageView
        android:id="@+id/rbs_recipient_avatar"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_xlinx_onwhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/rbs_full_name_1"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rbs_recipient_avatar"
        app:layout_constraintBottom_toTopOf="@id/rbs_full_name_2"
        android:text="@string/space_bs_meeting_title_1"/>

    <TextView
        android:id="@+id/rbs_full_name_2"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rbs_full_name_1"
        app:layout_constraintBottom_toTopOf="@id/rbs_full_name_3"
        android:text="@string/space_bs_meeting_title_2"/>

    <TextView
        android:id="@+id/rbs_full_name_3"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rbs_full_name_2"
        app:layout_constraintBottom_toTopOf="@id/rbs_note_to_self_description"
        android:text="@string/space_bs_meeting_title_3"/>


    <TextView
        android:id="@+id/rbs_note_to_self_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/space_bs_meeting_description"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbs_full_name_3"
        app:layout_constraintBottom_toTopOf="@id/form_space"/>

    <LinearLayout
        android:id="@+id/form_space"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbs_note_to_self_description"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/meetingUsername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:inputType="text"
            android:minWidth="210dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="#FFFFFF"
            android:hint="@string/space_bs_create_meeting_username_hint"
            android:textColorHint="#5e5e5e"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/meetingRoomName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:inputType="text"
            android:minWidth="210dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:background="#FFFFFF"
            android:hint="@string/space_bs_create_meeting_room_hint"
            android:textColorHint="#5e5e5e"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/createMeetingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="#4caf50"
            android:textColor="#FFFFFF"
            android:text="@string/space_bs_create_meeting_room_go" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>